--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,11 +6,30 @@ services:
         ports:
             - "8080:8080"
         environment:
-            - DEFAULT_DOMAIN=localhost:8080
-            - IS_HTTPS_ENABLED=false
+            - DEFAULT_DOMAIN=${DEFAULT_DOMAIN}
+            - IS_HTTPS_ENABLED=${HTTPS_ENABLED}
+            - DB_DRIVER=mysql
+            - DB_HOST=shlink_db
+            - DB_USER=${DB_USER}
+            - DB_PASSWORD=${DB_PASSWORD}
+            - DB_PORT=${DB_PORT}
+        depends_on:
+            - shlink_db
+        restart: always
 
     shlink_web_client:
         image: shlinkio/shlink-web-client
         container_name: shlink_web_client
         ports:
             - "8081:80"
+
+    shlink_db:
+        container_name: shlink_db
+        image: mysql:5.7
+        ports:
+            - "3307:${DB_PORT}"
+        environment:
+            MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+            MYSQL_USER: ${DB_USER}
+            MYSQL_PASSWORD: ${DB_PASSWORD}
+            MYSQL_DATABASE: ${DB_DATABASE}
