--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ DB_PASSWORD=secret
 DB_ROOT_PASSWORD=verystrongpassword
 DB_PORT=3306
 DB_DATABASE=shlink
+GEOLITE_LICENSE_KEY=put_your_licence_key_here
