--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
         environment:
             - DEFAULT_DOMAIN=${DEFAULT_DOMAIN}
             - IS_HTTPS_ENABLED=${HTTPS_ENABLED}
+            - GEOLITE_LICENSE_KEY=${GEOLITE_LICENSE_KEY}
             - DB_DRIVER=mysql
             - DB_HOST=shlink_db
             - DB_USER=${DB_USER}
