--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
+# shlink_server
 DEFAULT_DOMAIN=localhost:8080
+SHLINK_SERVER_PORT=8082
+SHLINK_WEB_CLIENT_PORT=8083
 HTTPS_ENABLED=false
 DB_USER=shlink
 DB_PASSWORD=secret
