--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
         image: shlinkio/shlink:stable
         container_name: shlink_server
         ports:
-            - "8080:8080"
+            - "${SHLINK_SERVER_PORT}:8080"
         environment:
             - DEFAULT_DOMAIN=${DEFAULT_DOMAIN}
             - IS_HTTPS_ENABLED=${HTTPS_ENABLED}
@@ -22,13 +22,13 @@ services:
         image: shlinkio/shlink-web-client
         container_name: shlink_web_client
         ports:
-            - "8081:80"
+            - "${SHLINK_WEB_CLIENT_PORT}:80"
 
     shlink_db:
         container_name: shlink_db
         image: mysql:5.7
         ports:
-            - "3307:${DB_PORT}"
+            - "${DB_PORT}:3306"
         environment:
             MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
             MYSQL_USER: ${DB_USER}
